# openglengine

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build_and_run.sh  clean_build.sh  cmake_install.cmake  imgui.ini  opengl  opengl.cbp  opengl.trace  rebuild_and_run.sh
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: imgui.cpp  imgui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
resources/shaders/: .Mandelbrot.frag.swp  Color.frag  Color.vert  Colored.frag  Colored.vert  Diffuse.frag  Diffuse.vert  DiffuseInstanced.frag  FastDiffuse.vert  Grid.frag  Grid.vert  Mandelbrot.frag  Mandelbrot.vert  TextFrag.glsl  Textured.frag  Textured.vert  TexturedCube.vert
resources/shaders/Ambient/: Ambient.frag  Ambient.vert
resources/shaders/Chart/: Chart.frag
resources/shaders/Grid/: Grid.frag  Grid.vert
resources/shaders/Phong/: Phong.frag
resources/shaders/Textured/: Textured.frag  Textured.vert
resources/shaders/TexturedCube/: TexturedCube.frag
src/: InputDispatcher.h  InputSystem.h  LightPositionUpdater.h  main.cpp
src/Engine/: Component.h  Engine.cpp  Engine.h  GameObject.h  InputDispatcher.h  OBJ_Loader.h  Scene.h  Shader.h  TextureLoader.h  Window.h  tiny_obj_loader.h
src/Engine/Base/: Component.h
src/Engine/Behaviour/: BehaviourComponent.cpp  BehaviourComponent.h
src/Engine/Camera/: BaseCamera.h  OrtographicCamera.h  PerspectiveCamera.h
src/Engine/Editor/: Editor.cpp  Editor.h  EditorStyle.cpp  EditorStyle.h  TextEditor.cpp  TextEditor.h
src/Engine/EngineInternal/: Component.h  Engine.cpp  Engine.h  EngineException.h  Settings.h
src/Engine/EngineInternal/Behaviour/: BehaviourComponent.cpp  BehaviourComponent.h  RotatingBehaviour.h
src/Engine/EngineInternal/Components/: Component.h
src/Engine/EngineInternal/Components/Behaviour/: BehaviourComponent.cpp  BehaviourComponent.h
src/Engine/EngineInternal/Components/MeshComponent/: MeshComponent.cpp  MeshComponent.h  SurfaceMeshComponent.h
src/Engine/EngineInternal/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.h
src/Engine/EngineInternal/Rendering/: Transform.h
src/Engine/EngineInternal/Rendering/Camera/: BaseCamera.cpp  BaseCamera.h  OrtographicCamera.cpp  OrtographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Projection.h
src/Engine/EngineInternal/Rendering/Culling/: Plane.h
src/Engine/EngineInternal/Rendering/EngineObject/: EngineObject.cpp  EngineObject.h
src/Engine/EngineInternal/Rendering/EngineRenderer/: EngineRenderer.cpp  EngineRenderer.h
src/Engine/EngineInternal/Rendering/GameObject/: GameObject.cpp  GameObject.h  GameObjectBase.cpp  GameObjectBase.h  Transform.h
src/Engine/EngineInternal/Rendering/Mesh/: BoundingBox.h  Mesh.cpp  Mesh.h  MeshBuilder.h  MeshInfo.h  MeshPrototype.cpp  MeshPrototype.h  MeshPrototypeInternal.cpp  MeshPrototypeInternal.h  MeshRenderer.cpp  MeshRenderer.h  MeshType.h  RenderInfo.h  SurfacePrototype.h  TriangleInfo.h
src/Engine/EngineInternal/Rendering/Primitives/: Cube.h  Line.h  LinePrototype.h  Point.h  Quad.h  SkyboxPrototype.h  Surface.h
src/Engine/EngineInternal/Rendering/Renderer/: InstancedMeshInfo.h  MeshInfo.h  Renderer.cpp  Renderer.h
src/Engine/EngineInternal/Rendering/RenderingManager/: RenderingManager.cpp  RenderingManager.h
src/Engine/EngineInternal/Rendering/SceneDefinition/: EngineScene.h  Scene.h  SceneMapper.h  UserScene.h
src/Engine/EngineInternal/Rendering/Shading/: Shader.h  ShaderPool.h  ShaderType.h
src/Engine/EngineInternal/Rendering/TextureRenderer/: TextureRenderer.cpp  TextureRenderer.h
src/Engine/EngineInternal/Scene/: BaseEngineScene.h  BaseScene.h  Scene.h  Transform.h
src/Engine/EngineInternal/Scene/BoundingBoxObject/: BoundingBoxObject.cpp  BoundingBoxObject.h
src/Engine/EngineInternal/Scene/GameObject/: GameObject.cpp  GameObject.h  GameObjectBase.cpp  GameObjectBase.h
src/Engine/EngineInternal/Scene/GameObjectFactory/: GameObjectFactory.cpp  GameObjectFactory.h
src/Engine/EngineInternal/Utils/: BoundingBoxGenerator.h  CharacterTextureGenerator.h  FastMath.h  MatrixUtils.h  NormalsGenerator.h  Objects.h  TextureLoader.cpp  TextureLoader.h  Timer.h  Utils.h
src/Engine/EngineInternal/Utils/BoundingBoxGenerator/: BoundingBoxGenerator.cpp  BoundingBoxGenerator.h
src/Engine/EngineInternal/Window/: Window.cpp  Window.h
src/Engine/Exceptions/: EngineException.h
src/Engine/MessageSystem/: Component.h  Message.h
src/Engine/Primitives/: CharacterMesh.h  Cube.h  Line.h  Mesh.h  Quad.h  RenderMesh.h  RenderObject.h  Surface.h  Transform.h  TrianglePrimitive.h
src/Engine/Renderers/: BaseCamera.h  OrthographicProjectionRenderer.h  OrtographicCamera.h  PerspectiveCamera.h  PerspectiveProjectionRenderer.h
src/Engine/Rendering/: EngineObject.cpp  EngineObject.h  EngineScene.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  RenderScene.h  SceneMapper.h  TextureRenderer.cpp  TextureRenderer.h  UserScene.h
src/Engine/Rendering/Camera/: BaseCamera.h  OrtographicCamera.h  PerspectiveCamera.h
src/Engine/Rendering/Primitives/: CharacterMesh.h  Cube.h  Line.h  Primitives.h  Quad.h  Surface.h
src/Engine/Rendering/Shading/: Shader.h  ShaderPool.h
src/Engine/Scene/: BaseScene.h  CubeScene.h  MainScene.h  OrthographicScene.h  Scenes.h  ShaderTestScene.h  TestScene.h
src/Engine/SceneScripts/: GameObject.h  Scene.h
src/Engine/Utils/: CharacterTextureGenerator.h  MatrixUtils.h  NormalsGenerator.h  TextureLoader.h  Utils.h
src/Engine/Utils/Logging/: Logger.h
src/Engine/Utils/MessageSystem/: Message.h  MessageBus.h
src/Engine/Window/: Window.h
src/Engine/Window/Input/: InputDispatcher.h  InputSystem.h  MessageListener.h
src/MessageSystem/: BusNode.h  CursorPositionMessage.h  Message.h  MessageBus.h
src/Scenes/: CubeScene.h  InstanncingRenderingTestScene.h  MainScene.h  OrthoScene.h  OrthographicScene.h  ShaderTestScene.h  TestScene.h
src/Scenes/test/: TestCubeScene.h  TestSphereScene.h
src/imgui/: imconfig.h  imgui_impl_opengl3.cpp
(+23 files in other folders)
